--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,6 @@
-/* @import "tailwindcss"; */
-@plugin "daisyui"{
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* @plugin "daisyui"{
     themes: all;
-}
+} */
