Buzzy Chat Application

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-/* @plugin "daisyui"{
+@import "tailwindcss";
+
+@plugin "daisyui" {
     themes: all;
-} */
+}
